# simurgh

./: LICENSE  README.md  parsec-cheatsheet.txt  simurgh.cabal  stack.yaml
app/: Command.hs  Main.hs  Parser.hs
notes/: parsec-cheatsheet.md  unbound-cheatsheet.md
src/: Elaboration.hs  Eval.hs  Lambda.hs  Parser.hs  Pretty.hs  Syntax.hs  Typing.hs
src/Simurgh/: Eval.hs  Module.hs  Parser.hs  Pretty.hs  Syntax.hs  Typing.hs
test/: Spec.hs
