name:                simurgh
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mgrabovsky/simurgh#readme
license:             MIT
license-file:        LICENSE
author:              Matěj Grabovský
maintainer:          matej.grabovsky@gmail.com
copyright:           2016 Matěj Grabovský
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Parser, Lambda
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.9 && < 4
                     , mtl >= 2.2.1 && < 3
                     , containers >= 0.5.4 && < 1
                     , text >= 1.2.2 && < 2
  default-language:    Haskell2010

executable simurgh-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simurgh
                     , haskeline >= 0.7.2.3 && < 1
  default-language:    Haskell2010

test-suite simurgh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simurgh
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mgrabovsky/simurgh
