name:                simurgh
version:             0.1.1.0
synopsis:            Dependently typed (hopefully) something.
description:         Please see README.md
homepage:            https://github.com/mgrabovsky/simurgh#readme
license:             MIT
license-file:        LICENSE
author:              Matěj Grabovský
maintainer:          matej@mgrabovsky.net
copyright:           2019 Matěj Grabovský
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Simurgh.Eval, Simurgh.Parser, Simurgh.Pretty,
                       Simurgh.Syntax, Simurgh.Typing
  default-extensions:  ViewPatterns
  ghc-options:         -Wall
  build-depends:       base             >= 4.7     && < 5
                     , containers       >= 0.6     && < 1
                     , mtl              >= 2.2.1   && < 2.3
                     , parsec           >= 3.1.13  && < 3.2
                     , pretty           >= 1.1.3.6 && < 2
                     , text             >= 1.2.2   && < 1.3
                     , transformers     >= 0.5.3   && < 0.6
                     , unbound-generics >= 0.4     && < 0.5
  default-language:    Haskell2010

executable simurgh-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskeline   >= 0.7.3.3 && < 1
                     , simurgh
  default-language:    Haskell2010

test-suite simurgh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base 
                     , simurgh
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mgrabovsky/simurgh

